--- a/index.html
+++ b/index.html
@@ -19,22 +19,24 @@
   <!--Шапка-->
   <header>
     <div class="container main">
-      <nav class="main-naf">
-        <a href="./index.html" class="logo">Web<span class="stydio">Studio</span> </a>
-        <ul class="site-nav">
-          <li class="item"><a href="./index.html" class="link current">Студія</a></li>
-          <li class="item"><a href="./portfolio.html" class="link">Портфоліо</a></li>
-          <li class="item"><a href="#" class="link">Контакти</a></li>
+      <nav class="main__nav">
+        <a href="./index.html" class="main__logo">Web<span class="main__stydio">Studio</span> </a>
+        <ul class="main__site">
+          <li class="main__item"><a href="./index.html" class="main__link current">Студія</a></li>
+          <li class="main__item"><a href="./portfolio.html" class="main__link">Портфоліо</a></li>
+          <li class="main__item"><a href="#" class="main__link">Контакти</a></li>
         </ul>
       </nav>
-      <ul class="contacts-nav">
-        <li class="item">
-          <a href="mailto:info@devstudio.com" class="contact-link"><svg class="icon-header" width="16" height="12">
+      <ul class="main__contacts">
+        <li class="main__contacts__item">
+          <a href="mailto:info@devstudio.com" class="main__contact__link"><svg class="main__contacts__svg" width="16"
+              height="12">
               <use href="./images/icons/icons.svg#icon-email"></use>
             </svg>info@devstudio.com</a>
         </li>
-        <li class="item">
-          <a href="tel:+380961111111" class="contact-link"><svg class="icon-header" width="10" height="16">
+        <li class="main__contacts__item">
+          <a href="tel:+380961111111" class="main__contact__link"><svg class="main__contacts__svg" width="10"
+              height="16">
               <use href="./images/icons/icons.svg#icon-smartphone"></use>
             </svg>+38 096 111 11 11</a>
         </li>
@@ -42,12 +44,12 @@
     </div>
   </header>
   <!-- Контент -->
-  <main class="">
+  <main>
     <!--Банер-->
     <section class="hero">
       <div class="container">
-        <h1 class="baner-title">Ефективні рішення для вашого бізнесу</h1>
-        <button class="baner-button pointer" data-modal-open type="button">Замовити послугу</button>
+        <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
+        <button class="hero__button pointer" data-modal-open type="button">Замовити послугу</button>
         <!-- Модальне вікно -->
         <div class="backdrop is-hidden" data-modal>
           <div class="modal">
@@ -159,128 +161,128 @@
     </section>
     <!--Чим ми займаємося-->
     <section class="work container">
-      <h2 class="work-title">Чим ми займаємося</h2>
-      <ul class="work-list">
-        <li class="item">
-          <div class="item-img">
-            <img class="img-box" src="./images/box/box-1.jpg" alt="Десктопні додатки" width="370" />
-            <h3 class="item-name">Десктопні додатки</h3>
+      <h2 class="work__title">Чим ми займаємося</h2>
+      <ul class="work__list">
+        <li class="work__item">
+          <div class="work__img">
+            <img src="./images/box/box-1.jpg" alt="Десктопні додатки" width="370" />
+            <h3 class="work__name">Десктопні додатки</h3>
           </div>
         </li>
-        <li class="item">
-          <div class="item-img">
+        <li class="work__item">
+          <div class="work__img">
             <img src="./images/box/box-2.jpg" alt="Мобільні додатки" width="370" />
-            <h3 class="item-name">Мобільні додатки</h3>
+            <h3 class="work__name">Мобільні додатки</h3>
           </div>
         </li>
-        <li class="item">
-          <div class="item-img">
+        <li class="work__item">
+          <div class="work__img">
             <img src="./images/box/box-3.jpg" alt="Дизайнерські рішення" width="370" />
-            <h3 class="item-name">Дизайнерські рішення</h3>
+            <h3 class="work__name">Дизайнерські рішення</h3>
           </div>
         </li>
       </ul>
     </section>
     <!--Наша команда-->
-    <section class="section command-color">
+    <section class="section command">
       <div class="container">
-        <h2 class="command-title">Наша команда</h2>
-        <ul class="command-list">
-          <li class="item">
+        <h2 class="command__title">Наша команда</h2>
+        <ul class="command__list">
+          <li class="command__item">
             <img src="./images/foto/foto-1.jpg" alt="Ігор Дем'яненко" width="300" />
-            <div class="content">
-              <h3 class="surname-title">Ігор Дем'яненко</h3>
-              <p class="position">Product Designer</p>
+            <div class="command__content">
+              <h3 class="command__surname__title">Ігор Дем'яненко</h3>
+              <p class="command__position">Product Designer</p>
             </div>
-            <ul class="social-icons">
-              <li><a class="social-link" href="#"><svg class="icon-social" width="20" height="20">
+            <ul class="social__icons">
+              <li><a class="social__link" href="#"><svg class="social__svg" width="20" height="20">
                     <use href=" ./images/icons/icons.svg#icon-instagram"></use>
                   </svg>
                 </a></li>
-              <li><a class="social-link" href="#"><svg class="icon-social" width="20" height="20">
+              <li><a class="social__link" href="#"><svg class="social__svg" width="20" height="20">
                     <use href="./images/icons/icons.svg#icon-twitter"></use>
                   </svg></a></li>
-              <li><a class="social-link" href="#">
-                  <svg class="icon-social" width="20" height="20">
+              <li><a class="social__link" href="#">
+                  <svg class="social__svg" width="20" height="20">
                     <use href="./images/icons/icons.svg#icon-facebook"></use>
                   </svg>
                 </a></li>
-              <li><a class="social-link" href="#"><svg class="icon-social" width="20" height="20">
+              <li><a class="social__link" href="#"><svg class="social__svg" width="20" height="20">
                     <use href="./images/icons/icons.svg#icon-linkedin"></use>
                   </svg></a></li>
             </ul>
           </li>
-          <li class="item">
+          <li class="command__item">
             <img src="./images/foto/foto-2.jpg" alt="Ольга Рєпіна" width="300" />
-            <div class="content">
-              <h3 class="surname-title">Ольга Рєпіна</h3>
-              <p class="position">Frontend Developer</p>
+            <div class="command__content">
+              <h3 class="command__surname__title">Ольга Рєпіна</h3>
+              <p class="command__position">Frontend Developer</p>
             </div>
-            <ul class="social-icons">
-              <li><a class="social-link" href="#"><svg class="icon-social" width="20" height="20">
+            <ul class="social__icons">
+              <li><a class="social__link" href="#"><svg class="social__svg" width="20" height="20">
                     <use href=" ./images/icons/icons.svg#icon-instagram"></use>
                   </svg>
                 </a></li>
-              <li><a class="social-link" href="#"><svg class="icon-social" width="20" height="20">
+              <li><a class="social__link" href="#"><svg class="social__svg" width="20" height="20">
                     <use href="./images/icons/icons.svg#icon-twitter"></use>
                   </svg></a></li>
-              <li><a class="social-link" href="#">
-                  <svg class="icon-social" width="20" height="20">
+              <li><a class="social__link" href="#">
+                  <svg class="social__svg" width="20" height="20">
                     <use href="./images/icons/icons.svg#icon-facebook"></use>
                   </svg>
                 </a></li>
-              <li><a class="social-link" href="#"><svg class="icon-social" width="20" height="20">
+              <li><a class="social__link" href="#"><svg class="social__svg" width="20" height="20">
                     <use href="./images/icons/icons.svg#icon-linkedin"></use>
                   </svg></a></li>
             </ul>
           </li>
-          <li class="item">
+          <li class="command__item">
             <img src="./images/foto/foto-3.jpg" alt="Микола Тарасов" width="300" />
-            <div class="content">
-              <h3 class="surname-title">Микола Тарасов</h3>
-              <p class="position">Marketing</p>
+            <div class="command__content">
+              <h3 class="command__surname__title">Микола Тарасов</h3>
+              <p class="command__position">Marketing</p>
             </div>
-            <ul class="social-icons">
+            <ul class="social__icons">
               <li>
-                <a class="social-link" href="#">
-                  <svg class="icon-social" width="20" height="20">
+                <a class="social__link" href="#">
+                  <svg class="social__svg" width="20" height="20">
                     <use href=" ./images/icons/icons.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
-              <li><a class="social-link" href="#"><svg class="icon-social" width="20" height="20">
+              <li><a class="social__link" href="#"><svg class="social__svg" width="20" height="20">
                     <use href="./images/icons/icons.svg#icon-twitter"></use>
                   </svg></a></li>
-              <li><a class="social-link" href="#">
-                  <svg class="icon-social" width="20" height="20">
+              <li><a class="social__link" href="#">
+                  <svg class="social__svg" width="20" height="20">
                     <use href="./images/icons/icons.svg#icon-facebook"></use>
                   </svg>
                 </a></li>
-              <li><a class="social-link" href="#"><svg class="icon-social" width="20" height="20">
+              <li><a class="social__link" href="#"><svg class="social__svg" width="20" height="20">
                     <use href="./images/icons/icons.svg#icon-linkedin"></use>
                   </svg></a></li>
             </ul>
           </li>
-          <li class="item">
+          <li class="command__item">
             <img src="./images/foto/foto-4.jpg" alt="Михайло Єрмаков" width="300" />
-            <div class="content">
-              <h3 class="surname-title">Михайло Єрмаков</h3>
-              <p class="position">UI Designer</p>
+            <div class="command__content">
+              <h3 class="command__surname__title">Михайло Єрмаков</h3>
+              <p class="command__position">UI Designer</p>
             </div>
-            <ul class="social-icons">
-              <li><a class="social-link" href="#"><svg class="icon-social" width="20" height="20">
+            <ul class="social__icons">
+              <li><a class="social__link" href="#"><svg class="social__svg" width="20" height="20">
                     <use href=" ./images/icons/icons.svg#icon-instagram"></use>
                   </svg>
                 </a></li>
-              <li><a class="social-link" href="#"><svg class="icon-social" width="20" height="20">
+              <li><a class="social__link" href="#"><svg class="social__svg" width="20" height="20">
                     <use href="./images/icons/icons.svg#icon-twitter"></use>
                   </svg></a></li>
-              <li><a class="social-link" href="#">
-                  <svg class="icon-social" width="20" height="20">
+              <li><a class="social__link" href="#">
+                  <svg class="social__svg" width="20" height="20">
                     <use href="./images/icons/icons.svg#icon-facebook"></use>
                   </svg>
                 </a></li>
-              <li><a class="social-link" href="#"><svg class="icon-social" width="20" height="20">
+              <li><a class="social__link" href="#"><svg class="social__svg" width="20" height="20">
                     <use href="./images/icons/icons.svg#icon-linkedin"></use>
                   </svg></a></li>
             </ul>
@@ -292,45 +294,45 @@
     <section class="container">
       <div class="section">
         <h2 class="client">Постійні клієнти</h2>
-        <ul class="client-icons">
-          <li class="client-section">
-            <a class="client-link" href="#">
-              <svg class="icon-client">
+        <ul class="client__icons">
+          <li>
+            <a class="client__link" href="#">
+              <svg class="client__svg">
                 <use href="./images/icons/icons.svg#icon-group1"></use>
               </svg>
             </a>
           </li>
-          <li class="client-section">
-            <a class="client-link" href="#">
-              <svg class="icon-client">
+          <li>
+            <a class="client__link" href="#">
+              <svg class="client__svg">
                 <use href="./images/icons/icons.svg#icon-group2"></use>
               </svg>
             </a>
           </li>
-          <li class="client-section">
-            <a class="client-link" href="#">
-              <svg class="icon-client">
+          <li>
+            <a class="client__link" href="#">
+              <svg class="client__svg">
                 <use href="./images/icons/icons.svg#icon-group3"></use>
               </svg>
             </a>
           </li>
-          <li class="client-section">
-            <a class="client-link" href="#">
-              <svg class="icon-client">
+          <li>
+            <a class="client__link" href="#">
+              <svg class="client__svg">
                 <use href="./images/icons/icons.svg#icon-group4"></use>
               </svg>
             </a>
           </li>
-          <li class="client-section">
-            <a class="client-link" href="#">
-              <svg class="icon-client">
+          <li>
+            <a class="client__link" href="#">
+              <svg class="client__svg">
                 <use href="./images/icons/icons.svg#icon-group5"></use>
               </svg>
             </a>
           </li>
-          <li class="client-section">
-            <a class="client-link" href="#">
-              <svg class="icon-client">
+          <li>
+            <a class="client__link" href="#">
+              <svg class="client__svg">
                 <use href="./images/icons/icons.svg#icon-group6"></use>
               </svg>
             </a>
@@ -342,52 +344,53 @@
   <!--Підвал-->
   <footer>
     <div class="container">
-      <div class="box-footer">
+      <div class="box__footer">
         <div>
-          <a href="./index.html" class="logo-footer">Web<span class="stydio-footer">Studio<span></a>
+          <a href="./index.html" class="footer__logo">Web<span class="footer__stydio">Studio<span></a>
           <address>
-            <ul class="address-nav">
-              <li class="addres-https">
+            <ul class="footer__address__nav">
+              <li class="footer__addres__https">
                 <a href="https://goo.gl/maps/YAiDTw7QHnEAMbG56" target="_blank" rel="noopener noreferrer nofollow"
-                  class="link">м.
+                  class="footer__address__link">м.
                   Київ, пр-т Лесі Українки, 26</a>
               </li>
-              <li class="mail">
-                <a href="mailto:info@devstudio.com" class="nav-link">info@devstudio.com</a>
+              <li class="footer__address__mail">
+                <a href="mailto:info@devstudio.com" class="footer__address__link">info@devstudio.com</a>
               </li>
-              <li class="tel">
-                <a href="tel:+380961111111" class="nav-link">+38 096 111 11 11</a>
+              <li class="footer__address__tel">
+                <a href="tel:+380961111111" class="footer__address__link">+38 096 111 11 11</a>
               </li>
             </ul>
           </address>
         </div>
-        <div class="box-social">
-          <h2 class="social-footer">приєднуйтесь</h2>
-          <ul class="footer-social-icons">
-            <li><a class="footer-social-link" href="#"><svg class="footer-icon-social" width="20" height="20">
+        <div class="footer__box__social">
+          <h2 class="footer__box__name">приєднуйтесь</h2>
+          <ul class="footer__social__icons">
+            <li><a class="footer__social__link" href="#"><svg class="footer__icon__social" width="20" height="20">
                   <use href=" ./images/icons/icons.svg#icon-instagram"></use>
                 </svg>
               </a></li>
-            <li><a class="footer-social-link" href="#"><svg class="footer-icon-social" width="20" height="20">
+            <li><a class="footer__social__link" href="#"><svg class="footer__icon__social" width="20" height="20">
                   <use href="./images/icons/icons.svg#icon-twitter"></use>
                 </svg></a></li>
-            <li><a class="footer-social-link" href="#">
-                <svg class="footer-icon-social" width="20" height="20">
+            <li><a class="footer__social__link" href="#">
+                <svg class="footer__icon__social" width="20" height="20">
                   <use href="./images/icons/icons.svg#icon-facebook"></use>
                 </svg>
               </a></li>
-            <li><a class="footer-social-link" href="#"><svg class="footer-icon-social" width="20" height="20">
+            <li><a class="footer__social__link" href="#"><svg class="footer__icon__social" width="20" height="20">
                   <use href="./images/icons/icons.svg#icon-linkedin"></use>
                 </svg></a></li>
           </ul>
         </div>
-        <div class="box-form">
-          <h2 class="form-item">Підпишіться на розсилку</h2>
-          <form class="footer-form-name">
+        <!-- Форма в футері -->
+        <div class="footer__box__form">
+          <h2 class="form__item">Підпишіться на розсилку</h2>
+          <form class="form__name">
             <label for="mail"></label>
-            <input class="footer-form-label" type="email" name="mail" id="mail" placeholder="E-mail">
-            <button type="submit" class="footer-form-button pointer">Підписатися
-              <svg class="footer-form-icon">
+            <input class="form__label" type="email" name="mail" id="mail" placeholder="E-mail">
+            <button type="submit" class="form__button pointer">Підписатися
+              <svg class="form__icon">
                 <use href="./images/icons/icons.svg#icon-send"></use>
               </svg>
             </button>
