--- a/portfolio.html
+++ b/portfolio.html
@@ -19,22 +19,24 @@
   <!--Шапка-->
   <header>
     <div class="container main">
-      <nav class="main-naf">
-        <a href="./index.html" class="logo">Web<span class="stydio">Studio</span> </a>
-        <ul class="site-nav">
-          <li class="item"><a href="./index.html" class="link">Студія</a></li>
-          <li class="item"><a href="./portfolio.html" class="link current">Портфоліо</a></li>
-          <li class="item"><a href="3" class="link">Контакти</a></li>
+      <nav class="main__nav">
+        <a href="./index.html" class="main__logo">Web<span class="main__stydio">Studio</span> </a>
+        <ul class="main__site">
+          <li class="main__item"><a href="./index.html" class="main__link">Студія</a></li>
+          <li class="main__item"><a href="./portfolio.html" class="main__link current">Портфоліо</a></li>
+          <li class="main__item"><a href="#" class="main__link">Контакти</a></li>
         </ul>
       </nav>
-      <ul class="contacts-nav">
-        <li class="item">
-          <a href="mailto:info@devstudio.com" class="contact-link"><svg class="icon-header" width="16" height="12">
+      <ul class="main__contacts">
+        <li class="main__contacts__item">
+          <a href="mailto:info@devstudio.com" class="main__contact__link"><svg class="main__contacts__svg" width="16"
+              height="12">
               <use href="./images/icons/icons.svg#icon-email"></use>
             </svg>info@devstudio.com</a>
         </li>
-        <li class="item">
-          <a href="tel:+380961111111" class="contact-link"><svg class="icon-header" width="10" height="16">
+        <li class="main__contacts__item">
+          <a href="tel:+380961111111" class="main__contact__link"><svg class="main__contacts__svg" width="10"
+              height="16">
               <use href="./images/icons/icons.svg#icon-smartphone"></use>
             </svg>+38 096 111 11 11</a>
         </li>
@@ -46,164 +48,164 @@
   <main>
     <section class="portfolio container">
       <h1 class="visually-hidden">Портфоліо</h1>
-      <ul class="button-container">
+      <ul class="portfolio__button">
         <li><button class="button pointer" type="button">Усі</button></li>
         <li><button class="button pointer" type="button">Веб-сайти</button></li>
         <li><button class="button pointer" type="button">Додатки</button></li>
         <li><button class="button pointer" type="button">Дизайн</button></li>
         <li><button class="button pointer" type="button">Маркетинг</button></li>
       </ul>
-      <ul class="flex-container">
-        <li class="portfolio-element">
-          <a class="portfolio-item" href="#">
-            <div class="portfolio-item-box">
+      <ul class="flex__container">
+        <li class="portfolio__element">
+          <a class="portfolio__item" href="#">
+            <div class="portfolio__item__box">
               <img src="./images/project/project-1.jpg" alt="Технокряк" width="370" />
-              <div class="portfolio-ofrlay">
-                <p class="portfolio-item-link">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+              <div class="portfolio__overlay">
+                <p class="portfolio__item__link">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
                   сервісів. Все це дозволить відвідувачу отримати
                   вичерпні відомості про компанію чи приватну особу.
                 </p>
               </div>
             </div>
-            <div class="section-portfolio">
-              <h2 class="portfolio-title">Технокряк</h2>
-              <p class="portfolio-name">Веб-сайт</p>
+            <div class="section__portfolio">
+              <h2 class="portfolio__title">Технокряк</h2>
+              <p class="portfolio__name">Веб-сайт</p>
             </div>
           </a>
         </li>
-        <li class="portfolio-element">
-          <a class="portfolio-item" href="#">
-            <div class="portfolio-item-box">
+        <li class="portfolio__element">
+          <a class="portfolio__item" href="#">
+            <div class="portfolio__item__box">
               <img src="./images/project/project-2.jpg" alt="Технокряк" width="370" />
-              <div class="portfolio-ofrlay">
-                <p class="portfolio-item-link">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+              <div class="portfolio__overlay">
+                <p class="portfolio__item__link">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
                   сервісів. Все це дозволить відвідувачу отримати
                   вичерпні відомості про компанію чи приватну особу.
                 </p>
               </div>
             </div>
-            <div class="section-portfolio">
-              <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
-              <p class="portfolio-name">Дизайн</p>
+            <div class="section__portfolio">
+              <h2 class="portfolio__title">Постер New Orlean vs Golden Star</h2>
+              <p class="portfolio__name">Дизайн</p>
             </div>
           </a>
         </li>
-        <li class="portfolio-element">
-          <a class="portfolio-item" href="#">
-            <div class="portfolio-item-box">
+        <li class="portfolio__element">
+          <a class="portfolio__item" href="#">
+            <div class="portfolio__item__box">
               <img src="./images/project/project-3.jpg" alt="Технокряк" width="370" />
-              <div class="portfolio-ofrlay">
-                <p class="portfolio-item-link">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+              <div class="portfolio__overlay">
+                <p class="portfolio__item__link">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
                   сервісів. Все це дозволить відвідувачу отримати
                   вичерпні відомості про компанію чи приватну особу.
                 </p>
               </div>
             </div>
-            <div class="section-portfolio">
-              <h2 class="portfolio-title">Ресторан Seafood</h2>
-              <p class="portfolio-name">Додаток</p>
+            <div class="section__portfolio">
+              <h2 class="portfolio__title">Ресторан Seafood</h2>
+              <p class="portfolio__name">Додаток</p>
             </div>
           </a>
         </li>
-        <li class="portfolio-element">
-          <a class="portfolio-item" href="#">
-            <div class="portfolio-item-box">
+        <li class="portfolio__element">
+          <a class="portfolio__item" href="#">
+            <div class="portfolio__item__box">
               <img src="./images/project/project-4.jpg" alt="Технокряк" width="370" />
-              <div class="portfolio-ofrlay">
-                <p class="portfolio-item-link">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+              <div class="portfolio__overlay">
+                <p class="portfolio__item__link">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
                   сервісів. Все це дозволить відвідувачу отримати
                   вичерпні відомості про компанію чи приватну особу.
                 </p>
               </div>
             </div>
-            <div class="section-portfolio">
-              <h2 class="portfolio-title">Проєкт Prime</h2>
-              <p class="portfolio-name">Маркетинг</p>
+            <div class="section__portfolio">
+              <h2 class="portfolio__title">Проєкт Prime</h2>
+              <p class="portfolio__name">Маркетинг</p>
             </div>
           </a>
         </li>
-        <li class="portfolio-element">
-          <a class="portfolio-item" href="#">
-            <div class="portfolio-item-box">
+        <li class="portfolio__element">
+          <a class="portfolio__item" href="#">
+            <div class="portfolio__item__box">
               <img src="./images/project/project-5.jpg" alt="Технокряк" width="370" />
-              <div class="portfolio-ofrlay">
-                <p class="portfolio-item-link">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+              <div class="portfolio__overlay">
+                <p class="portfolio__item__link">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
                   сервісів. Все це дозволить відвідувачу отримати
                   вичерпні відомості про компанію чи приватну особу.
                 </p>
               </div>
             </div>
-            <div class="section-portfolio">
-              <h2 class="portfolio-title">Проєкт Boxes</h2>
-              <p class="portfolio-name">Додаток</p>
+            <div class="section__portfolio">
+              <h2 class="portfolio__title">Проєкт Boxes</h2>
+              <p class="portfolio__name">Додаток</p>
             </div>
           </a>
         </li>
-        <li class="portfolio-element">
-          <a class="portfolio-item" href="#">
-            <div class="portfolio-item-box">
+        <li class="portfolio__element">
+          <a class="portfolio__item" href="#">
+            <div class="portfolio__item__box">
               <img src="./images/project/project-6.jpg" alt="Технокряк" width="370" />
-              <div class="portfolio-ofrlay">
-                <p class="portfolio-item-link">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+              <div class="portfolio__overlay">
+                <p class="portfolio__item__link">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
                   сервісів. Все це дозволить відвідувачу отримати
                   вичерпні відомості про компанію чи приватну особу.
                 </p>
               </div>
             </div>
-            <div class="section-portfolio">
-              <h2 class="portfolio-title">Inspiration has no Borders</h2>
-              <p class="portfolio-name">Веб-сайт</p>
+            <div class="section__portfolio">
+              <h2 class="portfolio__title">Inspiration has no Borders</h2>
+              <p class="portfolio__name">Веб-сайт</p>
             </div>
           </a>
         </li>
-        <li class="portfolio-element">
-          <a class="portfolio-item" href="#">
-            <div class="portfolio-item-box">
+        <li class="portfolio__element">
+          <a class="portfolio__item" href="#">
+            <div class="portfolio__item__box">
               <img src="./images/project/project-7.jpg" alt="Технокряк" width="370" />
-              <div class="portfolio-ofrlay">
-                <p class="portfolio-item-link">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+              <div class="portfolio__overlay">
+                <p class="portfolio__item__link">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
                   сервісів. Все це дозволить відвідувачу отримати
                   вичерпні відомості про компанію чи приватну особу.
                 </p>
               </div>
             </div>
-            <div class="section-portfolio">
-              <h2 class="portfolio-title">Видання Limited Edition</h2>
-              <p class="portfolio-name">Дизайн</p>
+            <div class="section__portfolio">
+              <h2 class="portfolio__title">Видання Limited Edition</h2>
+              <p class="portfolio__name">Дизайн</p>
             </div>
           </a>
         </li>
-        <li class="portfolio-element">
-          <a class="portfolio-item" href="#">
-            <div class="portfolio-item-box">
+        <li class="portfolio__element">
+          <a class="portfolio__item" href="#">
+            <div class="portfolio__item__box">
               <img src="./images/project/project-8.jpg" alt="Технокряк" width="370" />
-              <div class="portfolio-ofrlay">
-                <p class="portfolio-item-link">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+              <div class="portfolio__overlay">
+                <p class="portfolio__item__link">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
                   сервісів. Все це дозволить відвідувачу отримати
                   вичерпні відомості про компанію чи приватну особу.
                 </p>
               </div>
             </div>
-            <div class="section-portfolio">
-              <h2 class="portfolio-title">Проєкт LAB</h2>
-              <p class="portfolio-name">Маркетинг</p>
+            <div class="section__portfolio">
+              <h2 class="portfolio__title">Проєкт LAB</h2>
+              <p class="portfolio__name">Маркетинг</p>
             </div>
           </a>
         </li>
-        <li class="portfolio-element">
-          <a class="portfolio-item" href="#">
-            <div class="portfolio-item-box">
+        <li class="portfolio__element">
+          <a class="portfolio__item" href="#">
+            <div class="portfolio__item__box">
               <img src="./images/project/project-9.jpg" alt="Технокряк" width="370" />
-              <div class="portfolio-ofrlay">
-                <p class="portfolio-item-link">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+              <div class="portfolio__overlay">
+                <p class="portfolio__item__link">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
                   сервісів. Все це дозволить відвідувачу отримати
                   вичерпні відомості про компанію чи приватну особу.
                 </p>
               </div>
             </div>
-            <div class="section-portfolio">
-              <h2 class="portfolio-title">Growing Business</h2>
-              <p class="portfolio-name">Додаток</p>
+            <div class="section__portfolio">
+              <h2 class="portfolio__title">Growing Business</h2>
+              <p class="portfolio__name">Додаток</p>
             </div>
           </a>
         </li>
@@ -213,52 +215,53 @@
   <!--Підвал-->
   <footer>
     <div class="container">
-      <div class="box-footer">
+      <div class="box__footer">
         <div>
-          <a href="./index.html" class="logo-footer">Web<span class="stydio-footer">Studio<span></a>
+          <a href="./index.html" class="footer__logo">Web<span class="footer__stydio">Studio<span></a>
           <address>
-            <ul class="address-nav">
-              <li class="addres-https">
+            <ul class="footer__address__nav">
+              <li class="footer__addres__https">
                 <a href="https://goo.gl/maps/YAiDTw7QHnEAMbG56" target="_blank" rel="noopener noreferrer nofollow"
-                  class="link">м.
+                  class="footer__address__link">м.
                   Київ, пр-т Лесі Українки, 26</a>
               </li>
-              <li class="mail">
-                <a href="mailto:info@devstudio.com" class="nav-link">info@devstudio.com</a>
+              <li class="footer__address__mail">
+                <a href="mailto:info@devstudio.com" class="footer__address__link">info@devstudio.com</a>
               </li>
-              <li class="tel">
-                <a href="tel:+380961111111" class="nav-link">+38 096 111 11 11</a>
+              <li class="footer__address__tel">
+                <a href="tel:+380961111111" class="footer__address__link">+38 096 111 11 11</a>
               </li>
             </ul>
           </address>
         </div>
-        <div class="box-social">
-          <h2 class="social-footer">приєднуйтесь</h2>
-          <ul class="footer-social-icons">
-            <li><a class="footer-social-link" href="#"><svg class="footer-icon-social" width="20" height="20">
+        <div class="footer__box__social">
+          <h2 class="footer__box__name">приєднуйтесь</h2>
+          <ul class="footer__social__icons">
+            <li><a class="footer__social__link" href="#"><svg class="footer__icon__social" width="20" height="20">
                   <use href=" ./images/icons/icons.svg#icon-instagram"></use>
                 </svg>
               </a></li>
-            <li><a class="footer-social-link" href="#"><svg class="footer-icon-social" width="20" height="20">
+            <li><a class="footer__social__link" href="#"><svg class="footer__icon__social" width="20" height="20">
                   <use href="./images/icons/icons.svg#icon-twitter"></use>
                 </svg></a></li>
-            <li><a class="footer-social-link" href="#">
-                <svg class="footer-icon-social" width="20" height="20">
+            <li><a class="footer__social__link" href="#">
+                <svg class="footer__icon__social" width="20" height="20">
                   <use href="./images/icons/icons.svg#icon-facebook"></use>
                 </svg>
               </a></li>
-            <li><a class="footer-social-link" href="#"><svg class="footer-icon-social" width="20" height="20">
+            <li><a class="footer__social__link" href="#"><svg class="footer__icon__social" width="20" height="20">
                   <use href="./images/icons/icons.svg#icon-linkedin"></use>
                 </svg></a></li>
           </ul>
         </div>
-        <div class="box-form">
-          <h2 class="form-item">Підпишіться на розсилку</h2>
-          <form class="footer-form-name">
+        <!-- Форма в футері -->
+        <div class="footer__box__form">
+          <h2 class="form__item">Підпишіться на розсилку</h2>
+          <form class="form__name">
             <label for="mail"></label>
-            <input class="footer-form-label" type="email" name="mail" id="mail" placeholder="E-mail">
-            <button type="submit" class="footer-form-button">Підписатися
-              <svg class="footer-form-icon">
+            <input class="form__label" type="email" name="mail" id="mail" placeholder="E-mail">
+            <button type="submit" class="form__button pointer">Підписатися
+              <svg class="form__icon">
                 <use href="./images/icons/icons.svg#icon-send"></use>
               </svg>
             </button>
